iter_language/tests/corpus/invalid/queue-kafka-missing-bootstrap.iter
queue kafka {
  producer { topic = "t" }
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}
